fixed setRootPath in FileManager class and fixed toString for rootPath in PathCell class